style.css
body {
    font-family: Arial;
    color: black;
    margin: 0;
    padding: 0;
    width: 100%;
}

.button {
    border: #858585 solid 2px;
    border-radius: 8px;
    color: #858585;
    padding: 8px 16px 8px 16px;
    text-decoration: none;
}

.button:hover {
    background-color: #858585;
    color: #ffffff;
    font-weight: bold;
}

div {
    box-sizing: border-box;
}

.flexCardHorizontal {
    flex-wrap: wrap;
    gap: 5vw;
    justify-content: center;
}

.flexCardHorizontal,
.flexCardVertical {
    align-items: center;
    display: flex;
    justify-content: center;
}

.flexCardParagraphs {
    align-items: flex-start;
    display: flex;
    flex-direction: column;
}

.flexCardTextContainer {
    align-items: stretch;
    display: flex;
    flex: 1 1 auto;
    flex-direction: column;
    flex-wrap: wrap;
    gap: 5%;
    justify-content: center;
    min-width: 240px;
    width: 35vw;
}

.flexCardVertical {
    flex-direction: column;
    gap: 2vh;
    margin: 0 auto 0 auto;
}

.flexContainerVertical,
.flexContainerHorizontal {
    align-items: center;
    display: flex;
    margin: 0;
    padding: 5vh 5vw 5vh 5vw;
    width: 100%;
}

.flexContainerHorizontal {
    flex-wrap: wrap;
    gap: 3vw;
}

.flexContainerVertical {
    flex-direction: column;
    gap: 5vh;
}

footer {
    background-color: #f4f4f5;
    color: #252832;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 1.2rem;
    padding: .5vh 0 .5vh 0;
    text-align: center;
    width: 100%;
}

h3,
h5 {
    font-family: Arial, Helvetica, sans-serif;
    text-align: center;
}

h3 {
    font-weight: bold;
}

.heroContainer {
    height: 100vh;
    justify-content: center;
    margin: 0;
    padding: 0;
    text-align: center;
    width: 100vw;
}

#heroHighlight {
    background-image: url("/images/highlight_hero.jpg");
    object-position: 70% 20%;
    background-repeat: no-repeat;
    background-size: cover;
}

#heroIndex {
    background-image: url("/images/index_hero.jpg");
    background-position: 60% 30%;
    background-repeat: no-repeat;
    background-size: cover;
}

#heroRig {
    background-image: url("/images/rig_hero.jpg");
    background-position: 60% 60%;
    background-repeat: no-repeat;
    background-size: cover;
}

.heroText {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    opacity: 0.8;
    padding: 0 10vw 1vh 10vw;
    text-align: center;
}

.heroText h1 {
    color: black;
    font-family: cursive;
    font-size: 3rem;
    font-weight: bold;
    margin: 0;
    position: relative;
    z-index: 2;
}

#heroUs {
    background-image: url("/images/us_hero.jpg");
    background-position: 41% 70%;
    background-repeat: no-repeat;
    background-size: cover;
}

.img-med {
    aspect-ratio: 1 / 1;
    height: 85vmin;
    margin: 0 auto 0 auto;
    min-height: 240px;
    min-width: 240px;
    object-fit: cover;
    width: 85vmin;
}

.img-small,
.img-xs {
    aspect-ratio: 1 / 1;
    min-height: 240px;
    min-width: 240px;
    object-fit: cover;
}

.img-small {
    height: calc(80px + 30vmin);
    width: calc(80px + 30vmin);
}

.img-xs {
    width: calc(100px + 20vmin);
    height: calc(100px + 20vmin);
}

#navMenuHorizontal {
    align-items: center;
    display: none;
    justify-content: flex-start;
    margin: 0;
}

#navMenuHorizontal a {
    background-color: #ffffff88;
    border-radius: .5em;
    font-size: 1rem;
    padding: 1vh 1vw 1vh 1vw;
    text-align: center;
}

#navbarPopUp {
    background-color: white;
    border-radius: 2em;
    display: flex;
    justify-content: center;
    margin: 0 10vw 10vh 10vw;
    opacity: .95;
    position: absolute;
    z-index: 1;
}

#navIcon {
    display: none;
    height: auto;
    width: 50px;
}

.navIconActive {
    background-color: #ffffff88;
    border-radius: 50%;
}

.navItem {
    height: 35px;
    margin: 0;
    padding: 0;
    width: auto;
}

.navLink {
    color: black;
    font-family: Copperplate, Papyrus, fantasy;
    font-size: 1.5rem;
    text-decoration: none;
}

.navListDisplay {
    align-items: flex-start;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    gap: 1vw;
    justify-content: center;
    list-style: none;
    margin: 0;
    padding: 0;
}

.navListPopUp {
    align-items: center;
    display: flex;
    flex-direction: column;
    gap: 4vh;
    justify-content: center;
    list-style: none;
    margin: 0;
    padding: 8vh 0 8vh 0;
    width: 80vw;
}

#navSection {
    align-self: flex-start;
    display: flex;
    padding: 2vh;
    width: 100vw;
}

p {
    font-family: Garamond, serif;
    text-align: left;
}

#socialLinks {
    align-items: center;
    display: flex;
    list-style: none;
    margin: 0 0 0 auto;
    padding: 0;
}

.text-content {
    font-family: Garamond, serif;
}

